[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/prefabs/garage_door.gd" type="Script" id=1]
[ext_resource path="res://scripts/state_machine/state_machine.gd" type="Script" id=3]
[ext_resource path="res://scripts/components/door_animation_manager.gd" type="Script" id=4]
[ext_resource path="res://scripts/state_machine/door/closed.gd" type="Script" id=5]
[ext_resource path="res://scripts/state_machine/door/opened.gd" type="Script" id=6]
[ext_resource path="res://addons/interactive_element/interactive_element.gd" type="Script" id=7]

[node name="garage_door" type="Spatial"]
script = ExtResource( 1 )

[node name="unlock_area" type="Area" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="key_lock_position" type="Position3D" parent="."]
unique_name_in_owner = true

[node name="upper_door_panel" type="StaticBody" parent="." groups=["doors"]]
unique_name_in_owner = true
collision_mask = 0

[node name="UpperInteractiveElement" type="Area" parent="upper_door_panel"]
unique_name_in_owner = true
script = ExtResource( 7 )

[node name="lower_door_panel" type="StaticBody" parent="upper_door_panel"]
unique_name_in_owner = true
collision_mask = 0

[node name="LowerInteractiveElement" type="Area" parent="upper_door_panel/lower_door_panel"]
unique_name_in_owner = true
script = ExtResource( 7 )

[node name="DoorAnimationManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 4 )
selected_animation = "open_garage"

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 3 )

[node name="Closed" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Opened" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
